--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,17 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.leonardoAI.testCases.TC_ImageGenerationPage" class="method navigator-link" hash-for-method="test_DownLoadGenerateImage">test_DownLoadGenerateImage</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.leonardoAI.testCases.TC_ImageGenerationPage" class="method navigator-link" hash-for-method="test_GenerateImage">test_GenerateImage</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.leonardoAI.testCases.TC_ImageGenerationPage" class="method navigator-link" hash-for-method="test_RenameDonwloadedFile">test_RenameDonwloadedFile</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.leonardoAI.testCases.TC_Home" class="method navigator-link" hash-for-method="test_CheckAIToolSubMenus">test_CheckAIToolSubMenus</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -132,28 +122,14 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.leonardoAI.testCases.TC_ImageGenerationPage</span>
+              <span class="class-name">com.leonardoAI.testCases.TC_Home</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="test_DownLoadGenerateImage">
-                  </a> <!-- test_DownLoadGenerateImage -->
-                  <span class="method-name">test_DownLoadGenerateImage</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test_GenerateImage">
-                  </a> <!-- test_GenerateImage -->
-                  <span class="method-name">test_GenerateImage</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test_RenameDonwloadedFile">
-                  </a> <!-- test_RenameDonwloadedFile -->
-                  <span class="method-name">test_RenameDonwloadedFile</span>
+                  <a name="test_CheckAIToolSubMenus">
+                  </a> <!-- test_CheckAIToolSubMenus -->
+                  <span class="method-name">test_CheckAIToolSubMenus</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -168,14 +144,19 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite thread-count=&quot;1&quot; name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;parameter name=&quot;wantToBlockAdsAndNotifications&quot; value=&quot;true&quot;/&gt;
   &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
-  &lt;parameter name=&quot;paramtersfromtestNg&quot; value=&quot;user,false&quot;/&gt;
+  &lt;parameter name=&quot;incognitoMode&quot; value=&quot;false&quot;/&gt;
+  &lt;parameter name=&quot;userType&quot; value=&quot;user&quot;/&gt;
+  &lt;parameter name=&quot;enableDisableDebuggerMode&quot; value=&quot;false, 9222&quot;/&gt;
+  &lt;parameter name=&quot;headerLessBrowsing&quot; value=&quot;false&quot;/&gt;
+  &lt;parameter name=&quot;wantToByPassLoginLogout&quot; value=&quot;false&quot;/&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;com.leonardoAI.utilities.ExtentReport&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;1&quot; name=&quot;LeonardoAI_WATM&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.leonardoAI.testCases.TC_ImageGenerationPage&quot;/&gt;
+      &lt;class name=&quot;com.leonardoAI.testCases.TC_Home&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- LeonardoAI_WATM --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -215,24 +196,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'test_GenerateImage')
-data.setCell(0, 2, 'com.leonardoAI.testCases.TC_ImageGenerationPage')
-data.setCell(0, 3, 29773);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'test_DownLoadGenerateImage')
-data.setCell(1, 2, 'com.leonardoAI.testCases.TC_ImageGenerationPage')
-data.setCell(1, 3, 6568);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'test_RenameDonwloadedFile')
-data.setCell(2, 2, 'com.leonardoAI.testCases.TC_ImageGenerationPage')
-data.setCell(2, 3, 351);
+data.setCell(0, 1, 'test_CheckAIToolSubMenus')
+data.setCell(0, 2, 'com.leonardoAI.testCases.TC_Home')
+data.setCell(0, 3, 19451);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 36 seconds</span>
+              <span class="suite-total-time">Total running time: 19 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -258,34 +231,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.leonardoAI.testCases.TC_ImageGenerationPage</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.leonardoAI.testCases.TC_Home</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">Setup(chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
+              <div class="configuration-test before">
+                <span class="method-name">getDataFromTestNg(org.testng.TestRunner@28ee882c)</span>
+                <span class="method-start">29068 ms</span>
+              </div> <!-- configuration-test before -->
               <div class="configuration-class before">
-                <span class="method-name">Login(user,false)</span>
-                <span class="method-start">16970 ms</span>
+                <span class="method-name">Login(user)</span>
+                <span class="method-start">29225 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">test_GenerateImage</span>
-                <span class="method-start">54762 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test_DownLoadGenerateImage</span>
-                <span class="method-start">84573 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test_RenameDonwloadedFile</span>
-                <span class="method-start">91153 ms</span>
+                <span class="method-name">test_CheckAIToolSubMenus</span>
+                <span class="method-start">73380 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
-                <span class="method-name">Logout(user,false)</span>
-                <span class="method-start">91513 ms</span>
-              </div> <!-- configuration-test after -->
-              <div class="configuration-test after">
-                <span class="method-name">Teardown(user,false)</span>
-                <span class="method-start">102485 ms</span>
+                <span class="method-name">Logout(user)</span>
+                <span class="method-start">92917 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
