--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,18 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="de6986">  <td>24/06/23 11:55:50</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.Logout(java.lang.String)[pri:0, instance:com.leonardoAI.testCases.TC_ImageGenerationPage@3dddefd8]">&lt;&lt;Logout</td> 
+<tr bgcolor="de6986">  <td>24/06/28 21:47:36</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.Logout(java.lang.String)[pri:0, instance:com.leonardoAI.testCases.TC_Home@2b95e48b]">&lt;&lt;Logout</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="74c16d">  <td>24/06/23 11:55:50</td>   <td>-361</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ImageGenerationPage.test_RenameDonwloadedFile()[pri:3, instance:com.leonardoAI.testCases.TC_ImageGenerationPage@3dddefd8]">test_RenameDonwloadedFile</td> 
+<tr bgcolor="de6986">  <td>24/06/28 21:46:32</td>   <td>-63848</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.getDataFromTestNg(org.testng.ITestContext)[pri:0, instance:com.leonardoAI.testCases.TC_Home@2b95e48b]">&gt;&gt;getDataFromTestNg</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="74c16d">  <td>24/06/28 21:47:16</td>   <td>-19537</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Home.test_CheckAIToolSubMenus()[pri:1, instance:com.leonardoAI.testCases.TC_Home@2b95e48b]">test_CheckAIToolSubMenus</td> 
   <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="74c16d">  <td>24/06/23 11:55:13</td>   <td>-36752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ImageGenerationPage.test_GenerateImage()[pri:1, instance:com.leonardoAI.testCases.TC_ImageGenerationPage@3dddefd8]">test_GenerateImage</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="de6986">  <td>24/06/23 11:54:35</td>   <td>-74543</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Login(java.lang.String)[pri:0, instance:com.leonardoAI.testCases.TC_ImageGenerationPage@3dddefd8]">&gt;&gt;Login</td> 
+<tr bgcolor="de6986">  <td>24/06/28 21:46:03</td>   <td>-92900</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup(java.lang.String)[pri:0, instance:com.leonardoAI.testCases.TC_Home@2b95e48b]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="de6986">  <td>24/06/28 21:46:32</td>   <td>-63692</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Login(java.lang.String)[pri:0, instance:com.leonardoAI.testCases.TC_Home@2b95e48b]">&gt;&gt;Login</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="de6986">  <td>24/06/23 11:54:18</td>   <td>-91506</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup(java.lang.String)[pri:0, instance:com.leonardoAI.testCases.TC_ImageGenerationPage@3dddefd8]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="de6986">  <td>24/06/23 11:56:01</td>   <td>10972</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.Teardown(java.lang.String)[pri:0, instance:com.leonardoAI.testCases.TC_ImageGenerationPage@3dddefd8]">&lt;&lt;Teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="74c16d">  <td>24/06/23 11:55:43</td>   <td>-6941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ImageGenerationPage.test_DownLoadGenerateImage()[pri:2, instance:com.leonardoAI.testCases.TC_ImageGenerationPage@3dddefd8]">test_DownLoadGenerateImage</td> 
-  <td>main@617901222</td>   <td></td> </tr>
 </table>
