--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="de6986">  <td>24/06/28 21:46:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Login(java.lang.String)[pri:0, instance:com.leonardoAI.testCases.TC_Home@2b95e48b]">&gt;&gt;Login</td> 
+<tr bgcolor="de6986">  <td>24/06/30 22:11:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.Login(java.lang.String)[pri:0, instance:com.leonardoAI.testCases.TC_ImageGenerationPage@12bfd80d]">&gt;&gt;Login</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="de6986">  <td>24/06/28 21:47:36</td>   <td>63692</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.Logout(java.lang.String)[pri:0, instance:com.leonardoAI.testCases.TC_Home@2b95e48b]">&lt;&lt;Logout</td> 
+<tr bgcolor="de6986">  <td>24/06/30 22:11:28</td>   <td>14638</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.Logout(java.lang.String)[pri:0, instance:com.leonardoAI.testCases.TC_ImageGenerationPage@12bfd80d]">&lt;&lt;Logout</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="de6986">  <td>24/06/28 21:46:03</td>   <td>-29208</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup(java.lang.String)[pri:0, instance:com.leonardoAI.testCases.TC_Home@2b95e48b]">&gt;&gt;Setup</td> 
+<tr bgcolor="de6986">  <td>24/06/30 22:11:00</td>   <td>-13269</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.Setup(java.lang.String)[pri:0, instance:com.leonardoAI.testCases.TC_ImageGenerationPage@12bfd80d]">&gt;&gt;Setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="de6986">  <td>24/06/28 21:46:32</td>   <td>-156</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.getDataFromTestNg(org.testng.ITestContext)[pri:0, instance:com.leonardoAI.testCases.TC_Home@2b95e48b]">&gt;&gt;getDataFromTestNg</td> 
+<tr bgcolor="de6986">  <td>24/06/30 22:11:28</td>   <td>14639</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.Teardown()[pri:0, instance:com.leonardoAI.testCases.TC_ImageGenerationPage@12bfd80d]">&lt;&lt;Teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="74c16d">  <td>24/06/28 21:47:16</td>   <td>44155</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Home.test_CheckAIToolSubMenus()[pri:1, instance:com.leonardoAI.testCases.TC_Home@2b95e48b]">test_CheckAIToolSubMenus</td> 
+<tr bgcolor="de6986">  <td>24/06/30 22:11:00</td>   <td>-13293</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.getDataFromTestNg(org.testng.ITestContext)[pri:0, instance:com.leonardoAI.testCases.TC_ImageGenerationPage@12bfd80d]">&gt;&gt;getDataFromTestNg</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="74c16d">  <td>24/06/30 22:11:14</td>   <td>440</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ImageGenerationPage.test_DownLoadGenerateImage()[pri:2, instance:com.leonardoAI.testCases.TC_ImageGenerationPage@12bfd80d]">test_DownLoadGenerateImage</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="74c16d">  <td>24/06/30 22:11:27</td>   <td>13970</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ImageGenerationPage.test_RenameDonwloadedFile()[pri:3, instance:com.leonardoAI.testCases.TC_ImageGenerationPage@12bfd80d]">test_RenameDonwloadedFile</td> 
   <td>main@617901222</td>   <td></td> </tr>
 </table>
